# inference_grpc

./: .gitignore  .gitmodules  CMakeLists.client.txt  CMakeLists.txt  Dockerfile  Dockerfile.copy  Dockerfile.cp  Dockerfile.flask  README.md
include/: engine.h  grpc_server.h  helper.h  img_classify_tensorrt.h  model_tensorrt.h
protos/: grpc_infer_service.grpc.pb.cc  grpc_infer_service.grpc.pb.h  grpc_infer_service.pb.cc  grpc_infer_service.pb.h  grpc_infer_service.proto  grpc_infer_service_pb2.py  grpc_infer_service_pb2_grpc.py  my_grpc_service.proto
python/: flask_server.py
scripts/: build.sh
src/: argparser_test.cc  flask_server.py  grpc_client.cc  grpc_client.py  grpc_server.cc  helper.cc  img_classify_tensorrt.cc  model_tensorrt.cc  test.cc
test/: argparser_test.cc  cxxopts_test.cc  http_post.py  img_classify_onnx.cc  img_classify_tensorrt.cc  tensorrt_test.cc  test.cc
